# ProjektInfCodeSnippets

./: README.md
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplication1/ConsoleApplication1/Debug/ConsoleA.A9DEF9B3.tlog/: CL.write.1.tlog  ConsoleApplication1.lastbuildstate
ConsoleApplication1/ConsoleApplication1/x64/Debug/: ConsoleApplication1.pch  vc141.idb
ConsoleApplication1/lib/: snappy.lib
ConsoleApplication1/x64/Debug/: ConsoleApplication1.ilk
ConsoleApplication2/: CMakeLists.txt  ConsoleApplication2.cpp  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters
ConsoleApplication2/BidirectionalTest/: test.html
H264Test/: H264Test.sln
H264Test/H264Test/: H264Test.cpp  H264Test.vcxproj  H264Test.vcxproj.filters  stdafx.cpp
H264Test/H264Test/Debug/: H264Test.pch  vc141.idb
H264Test/H264Test/Debug/H264Test.tlog/: H264Test.lastbuildstate
H264Test/H264Test/x64/Debug/: H264Test.pch  vc141.idb
H264Test/lib/: openh264x64.exp  openh264x64.lib  openh264x86.exp  openh264x86.lib
NeuerWebsocketTest/: NeuerWebsocketTest.sln
NeuerWebsocketTest/Debug/: NeuerWebsocketTest.ilk
NeuerWebsocketTest/NeuerWebsocketTest/: NeuerWebsocketTest.cpp  NeuerWebsocketTest.vcxproj  NeuerWebsocketTest.vcxproj.filters  stdafx.cpp
NeuerWebsocketTest/NeuerWebsocketTest/Debug/: NeuerWebsocketTest.pch  vc141.idb
NeuerWebsocketTest/NeuerWebsocketTest/Debug/NeuerWeb.5DF0EAEA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NeuerWebsocketTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NewTestProject/: NewTestProject.sln
NewTestProject/Debug/: NewTestProject.ilk
NewTestProject/NewTestProject/: NewTestProject.cpp  NewTestProject.vcxproj  NewTestProject.vcxproj.filters  stdafx.cpp
NewTestProject/NewTestProject/Debug/: NewTestProject.pch  vc141.idb
NewTestProject/NewTestProject/Debug/NewTestProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NewTestProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SnappyTest/: ConsoleApplication1.sln
SnappyTest/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
SnappyTest/ConsoleApplication1/Debug/: ConsoleApplication1.pch  vc141.idb
SnappyTest/include/: snappy-stubs-public.h
SnappyTest/x64/Debug/: ConsoleApplication1.ilk  HalloWelt.txt
WebsocketAsiotest/: CMakeLists.txt  SampleWebServer.cpp  index.html
WebsocketAsiotest/BidirectionalTest/: color_buf.txt  test.js
(+26 files in other folders)
